# aoc_2025_12

./: .gitignore  Cargo.toml
benches/: my_bench.rs
src/: file_parser.rs  lib.rs  main.rs  presents.rs  space.rs  tree.rs
src/presents/: possibilities.rs
tests/: file_opening_test.txt  single_line_file.txt
